--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,7 +19,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  color: #ffffff;
+  background-color: black;
 }
 
 a {
@@ -30,4 +30,8 @@ a {
 * {
   box-sizing: border-box;
   font-family: Din;
+}
+
+input:focus {
+  outline: none;
 }
